[gd_scene load_steps=9 format=3 uid="uid://c50737uagx074"]

[ext_resource type="Shader" path="res://assets/shaders/pixel.gdshader" id="1_8w4wf"]
[ext_resource type="Script" path="res://assets/scripts/ui/tools/tools.gd" id="2_txfwe"]
[ext_resource type="Script" path="res://assets/scripts/ui/hud/time.gd" id="3_162n2"]
[ext_resource type="Script" path="res://assets/scripts/ui/hud/balance.gd" id="4_kf5nc"]
[ext_resource type="Texture2D" uid="uid://eqwryqhmkfgu" path="res://assets/resources/ui/buttons/buildings/button_0.png" id="5_sytnb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lbeot"]
shader = ExtResource("1_8w4wf")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kyg1e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6fyro"]

[node name="Interface" type="Control"]
material = SubResource("ShaderMaterial_lbeot")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_txfwe")

[node name="Time" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("3_162n2")

[node name="Timer" type="Timer" parent="Time"]

[node name="Label" type="Label" parent="Time"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -7.0
offset_top = 22.0
offset_right = 7.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_constants/shadow_offset_y = 25
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 18
text = "Time
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Money" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
script = ExtResource("4_kf5nc")

[node name="Label" type="Label" parent="Money"]
layout_mode = 0
offset_left = 22.0
offset_top = -10.0
offset_right = 103.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 25
text = "Money"

[node name="Tools Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
mouse_force_pass_scroll_events = false

[node name="Tools Hud" type="Panel" parent="Tools Menu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -304.0
offset_top = -71.0
grow_horizontal = 0
grow_vertical = 0

[node name="Container" type="HBoxContainer" parent="Tools Menu/Tools Hud"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -304.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="Destroy" type="Button" parent="Tools Menu/Tools Hud/Container"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_kyg1e")
text = "Destroy"

[node name="Watering" type="Button" parent="Tools Menu/Tools Hud/Container"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_6fyro")
text = "Watering"

[node name="Farm" type="Button" parent="Tools Menu/Tools Hud/Container"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_6fyro")
text = "Farming"

[node name="Building" type="Button" parent="Tools Menu/Tools Hud/Container"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_6fyro")
icon = ExtResource("5_sytnb")

[node name="BuildingMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="BuildingMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = -110.5
offset_right = 110.5
offset_bottom = 110.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="timeout" from="Time/Timer" to="Time" method="_on_timer_timeout"]
[connection signal="mouse_entered" from="Tools Menu/Tools Hud/Container/Destroy" to="." method="_on_destroy_mouse_entered"]
[connection signal="mouse_exited" from="Tools Menu/Tools Hud/Container/Destroy" to="." method="_on_destroy_mouse_exited"]
[connection signal="pressed" from="Tools Menu/Tools Hud/Container/Destroy" to="." method="_on_destroy_pressed"]
[connection signal="mouse_entered" from="Tools Menu/Tools Hud/Container/Watering" to="." method="_on_watering_mouse_entered"]
[connection signal="mouse_exited" from="Tools Menu/Tools Hud/Container/Watering" to="." method="_on_watering_mouse_exited"]
[connection signal="pressed" from="Tools Menu/Tools Hud/Container/Watering" to="." method="_on_watering_pressed"]
[connection signal="mouse_entered" from="Tools Menu/Tools Hud/Container/Farm" to="." method="_on_farm_mouse_entered"]
[connection signal="mouse_exited" from="Tools Menu/Tools Hud/Container/Farm" to="." method="_on_farm_mouse_exited"]
[connection signal="pressed" from="Tools Menu/Tools Hud/Container/Farm" to="." method="_on_farm_pressed"]
[connection signal="toggled" from="Tools Menu/Tools Hud/Container/Farm" to="." method="_on_farm_toggled"]
[connection signal="mouse_entered" from="Tools Menu/Tools Hud/Container/Building" to="." method="_on_building_mouse_entered"]
[connection signal="mouse_exited" from="Tools Menu/Tools Hud/Container/Building" to="." method="_on_building_mouse_exited"]
[connection signal="pressed" from="Tools Menu/Tools Hud/Container/Building" to="." method="_on_building_pressed"]
